registro de cliente

--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -24,6 +24,7 @@
                 {% if user_is_authenticated %}
                 <li><a href="{% url 'prestamos' %}">Préstamos</a></li>
                 <li><a href="{% url 'clientes' %}">Clientes</a></li>
+                <li><a href="{% url 'pagos' %}">Pagos</a></li>
             </ul>
             <ul class="logout-container">
                 <li>
