--- a/core/templates/clientes/clientes.html
+++ b/core/templates/clientes/clientes.html
@@ -1,45 +1,48 @@
 {% extends "layouts/base.html" %}
 {% load static %}
 {% block content %}
-<div class="container">
-    <div class="detalles-container">
-        <div class="left-column">
-            <div class="card-left">
-                <h5>Información Básica</h5>
-                <p>Tipo de persona: {{ clientes.tipo_persona }}</p>
-                <p>Nombre: {{ clientes.nombre }}</p>
-                <p>Apellido: {{ clientes.apellido }}</p>
-                <p>Genero: {{ clientes.nombre }}</p>
-                <p>Fecha de Nacimiento: {{ clientes.fecha_nacimiento }}</p>
-            </div>
-            <div class="card-left">
-                <h5>Información Adicional</h5>
-                <p>Modificado Por: {{ cliente.ultimo_usuario_modificacion.username }}</p>
-                <p>Ultimo pago: </p>
-                <p>Prestamos activos: {{ prestamos_activos }}</p>
-                <p>Prestamos pagados: {{ prestamos_pagados }}</p>
-            </div>
+<div class="card-general">
+    <div class="buttons">
+        <a href="{% url 'cliente_crear' %}" class="btn btn-primary">Registrar un cliente</a>
+    </div>
+    <div class="clientes">
+        <h5>Clientes</h5>
+        <div style="display: grid; grid-template-columns: 1fr auto; margin-bottom: 10px;">
+            <div></div>
+        <input type="text" id="searchInputPagados" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
         </div>
-        <div class="right-column">
-            <div class="card-right">
-                <h5>Direcciones</h5>
-                <p>Direccion 1: {{ cliente.direccion_1 }}</p>
-                <p>Direccion 2: {{ cliente.direccion_2 }}</p>
-
-            </div>
-            <div class="card-right">
-                <h5>Documento de Identidad</h5>
-                <p>Cedula de identidad: {{ cliente.cedula }}</p>
-                <p>RIF: {{ cliente.rif }}</p>
-            </div>
-            <div class="card-right">
-                <h5>Información de Contacto</h5>
-                <p>Correo 1: {{ cliente.email_1 }}</p>
-                <p>Correo 2: {{ cliente.email_2 }}</p>
-                <p>Numero de telefono: {{ cliente.numero_telefono }}</p>
-                <p>Numero local: {{ cliente.numero_local }}</p>
-            </div>
-        </div>
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th class="th sort-both">ID</th>
+                    <th class="th sort-both">Nombre</th>
+                    <th class="th sort-both">Apellido</th>
+                    <th class="th sort-both">Cedula</th>
+                    <th class="th sort-both">Prestamos activos</th>
+                    <th class="th sort-both">Prestamos pagados</th>
+                    <th class="th sort-both">Balance</th>
+                    <th>Detalles</th>
+                </tr>
+            </thead>
+            <tbody id="pagadosTableBody">
+                {% for clientes in clientes %}
+                <tr>
+                    <td><a href="{% url 'cliente_detalles' clientes.id %}">{{ clientes.id }}</a></td>
+                    <td>{{ clientes.nombre }}</td>
+                    <td>{{ clientes.apellido }}</td>
+                    <td>{{ clientes.cedula }}</td>
+                    <td>{{ clientes.prestamos_activos }}</td>
+                    <td>{{ clientes.prestamos_pagados }}</td>
+                    <td>${{ clientes.balance }}</td>
+                    <td><a href="{% url 'cliente_detalles' clientes.id %}">detalles</a></td>
+                </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="7" class="text-center">No hay clientes registrados.</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
 {% endblock content %}
