scripts en pagina clientes

--- a/core/templates/prestamos/prestamos.html
+++ b/core/templates/prestamos/prestamos.html
@@ -91,6 +91,7 @@
     </div>
 </div>
 <script>
+    // script para ordenar las tablas
     document.addEventListener('DOMContentLoaded', () => {
     const tables = document.querySelectorAll('table.table'); // Selecciona todas las tablas
 
