--- a/core/templates/clientes/clientes.html
+++ b/core/templates/clientes/clientes.html
@@ -2,14 +2,14 @@
 {% load static %}
 {% block content %}
 <div class="card-general">
-    <div class="buttons">
-        <a href="{% url 'cliente_crear' %}" class="btn btn-primary">Registrar un cliente</a>
-    </div>
     <div class="clientes">
         <h5>Clientes</h5>
+
         <div style="display: grid; grid-template-columns: 1fr auto; margin-bottom: 10px;">
-            <div></div>
-        <input type="text" id="searchInputPagados" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
+            <div class="buttons">
+                <a href="/cliente/crear" class="btn btn-primary">Registrar un cliente</a>
+            </div>
+        <input type="text" id="searchInput" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
         </div>
         <table class="table table-bordered">
             <thead>
@@ -24,10 +24,10 @@
                     <th>Detalles</th>
                 </tr>
             </thead>
-            <tbody id="pagadosTableBody">
+            <tbody id="clientesTableBody">
                 {% for clientes in clientes %}
                 <tr>
-                    <td><a href="{% url 'cliente_detalles' clientes.id %}">{{ clientes.id }}</a></td>
+                    <td>{{ clientes.id }}</td>
                     <td>{{ clientes.nombre }}</td>
                     <td>{{ clientes.apellido }}</td>
                     <td>{{ clientes.cedula }}</td>
@@ -45,4 +45,92 @@
         </table>
     </div>
 </div>
+
+<script>
+// script para buscar en tablas
+document.addEventListener('DOMContentLoaded', () => {
+    const searchInput = document.getElementById('searchInput');
+    const tableBody = document.getElementById('clientesTableBody');
+
+    searchInput.addEventListener('input', function() {
+        const filter = searchInput.value.toLowerCase();
+        const rows = tableBody.getElementsByTagName('tr');
+
+        for (let i = 0; i < rows.length; i++) {
+            const cells = rows[i].getElementsByTagName('td');
+            let found = false;
+
+            for (let j = 0; j < cells.length; j++) {
+                const cell = cells[j];
+                if (cell) {
+                    const textValue = cell.textContent || cell.innerText;
+                    if (textValue.toLowerCase().indexOf(filter) > -1) {
+                        found = true;
+                        break;
+                    }
+                }
+            }
+
+            if (found) {
+                rows[i].style.display = ""; // Muestra la fila
+            } else {
+                rows[i].style.display = "none"; // Oculta la fila
+            }
+        }
+    });
+});
+
+// script para ordenar las tablas
+document.addEventListener('DOMContentLoaded', () => {
+    const tables = document.querySelectorAll('table.table'); // Selecciona todas las tablas
+
+    tables.forEach(table => {
+        let sortOrder = {};
+        const thElements = table.querySelectorAll('th');
+
+        thElements.forEach((th) => {
+            th.addEventListener('click', (event) => {
+                event.preventDefault();
+                const columnIndex = Array.prototype.indexOf.call(th.parentNode.children, th);
+                const columnName = th.textContent.trim();
+                // Toggle sort order
+                if (!sortOrder[columnName]) {
+                    sortOrder[columnName] = 'asc';
+                } else if (sortOrder[columnName] === 'asc') {
+                    sortOrder[columnName] = 'desc';
+                } else {
+                    sortOrder[columnName] = 'asc';
+                }
+                // Update class
+                th.className = th.className.replace(/sort-asc|sort-desc/, `sort-${sortOrder[columnName]}`);
+
+                // Call sortTable function
+                sortTable(table, columnIndex, sortOrder[columnName]);
+            });
+        });
+
+        function sortTable(table, columnIndex, sortOrder) {
+            var rows = Array.prototype.slice.call(table.querySelectorAll('tbody tr'));
+            rows.sort(function(rowA, rowB) {
+                var cellA = rowA.cells[columnIndex].textContent;
+                var cellB = rowB.cells[columnIndex].textContent;
+                // Handle numerical values
+                if (!isNaN(cellA) && !isNaN(cellB)) {
+                    return cellA - cellB;
+                }
+                // Default to string comparison
+                return cellA.localeCompare(cellB);
+            });
+            // Sort order
+            if (sortOrder === 'desc') {
+                rows.reverse();
+            }
+            // Update the table
+            rows.forEach(function(row) {
+                table.querySelector('tbody').appendChild(row);
+            });
+        }
+    });
+});
+</script>
 {% endblock content %}
